corrected an issue where there was white space to the right of the page

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/** screen size */
+html, body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+
 
 /** Base Styles
 --------------------------------------------------------------*/
@@ -458,6 +465,14 @@ footer a:hover {
   width: 50px;
   height: 50px;
   margin-right: 20px;
+}
+
+/* email word break */
+
+@media (max-width: 768px) {
+footer a[href^="mailto:"] {
+  word-break: break-all;
+}
 }
 
 /* Bootstrap theme override 
